--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "johnkary/phpunit-speedtrap": "^1.0",
         "jtant/laravel-env-sync": "^1.3",
         "laravel/framework": "5.3.*",
+        "predis/predis": "^1.1",
         "spatie/laravel-fractal": "^3.2"
     },
     "require-dev": {
