--- a/problem-3/client/package.json
+++ b/problem-3/client/package.json
@@ -3,12 +3,13 @@
   "description": "Teamleader Coding Test (client)",
   "version": "0.0.1",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "html-webpack-plugin": "^2.28.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
-    "lodash": ">=4.17.11"
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2"
   },
   "scripts": {
     "start": "webpack-dev-server",
