--- a/problem-3/client/package.json
+++ b/problem-3/client/package.json
@@ -12,7 +12,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
