--- a/problem-3/client/package.json
+++ b/problem-3/client/package.json
@@ -12,7 +12,7 @@
     "webpack-dev-server": "^4.1.0"
   },
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
